# Local-Rag-Chat-Bot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyrightconfig.json
backend/: README.md  main.py  pyproject.toml
backend/data/clef-sample/: acceptable-use.txt  backup-policy.txt  baseline.json  disaster-recovery.txt  equipment-checkout.txt  eval.json  onboarding-checklist.txt  password-policy.txt  security-incident.txt  software-request.txt  travel-policy.txt  vpn-access.txt
backend/data/sample/: baseline.json  company-overview.md  deploy-runbook.md  eval.json  faq.txt  onboarding.md  pto-policy.md  security-policy.txt
backend/data/sample-v2/: baseline.json  eval.json  park-overview.md  permits-and-fees.md  ranger-operations.md  trail-guide.md  visitor-faq.txt  wildlife-safety.txt
backend/data/sample-v3/: baseline.json  eval.json  trail-guide.md  wildlife-safety.txt
backend/data/thornmere/: baseline.json  park-overview.md  permits-and-fees.md  ranger-operations.md  visitor-faq.txt
backend/rag/: budget.py  chunk.py  cite.py  config.py  ingest.py  llm.py  store.py
backend/tests/: test_budget.py  test_chat.py  test_chunk.py  test_cite.py  test_skeleton.py  test_store.py
docs/: api-contract.md  architecture.md  corpus-generation-prompt.md  design.md  results.md  spec.md  tasks.md
evals/: EXPERIMENTS.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CitationList.tsx  Composer.tsx  HealthDot.tsx  MessageBubble.tsx  (+1 more)
scripts/: chat.py  demo.ps1  dev.ps1  dev.sh  eval.py  judge.py  smoke.py
